FIxed Slider on desktop, fixed overflow of Overlays on desktop.

--- a/src/app/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
+++ b/src/app/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
@@ -11,6 +11,8 @@
         pointer-events: all;
         display: flex;
         flex-direction: column;
+        height: auto;
+        overflow: visible;
     }
 
     &-Heading {
